<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/search_categorySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/search_brandSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_categorySpinner" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_keywords_layout"
            style="@style/Widget.TrainInventory.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:hint="@string/hint_search_keywords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_brandSpinner">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_keywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapCharacters" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:icon="@drawable/ic_search"
            app:iconGravity="end"
            app:iconTint="@color/colorPrimaryDark"
            app:iconTintMode="multiply"
            android:textColor="@color/colorPrimaryDark"
            app:cornerRadius="@dimen/search_btn_corner_radius"
            app:backgroundTint="@color/colorAccent"
            app:backgroundTintMode="add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_keywords_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:itemDivider="@{true}"
            tools:listitem="@layout/item_train"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_btn"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/empty_image"
            android:layout_width="@dimen/empty_image_dim"
            android:layout_height="@dimen/empty_image_dim"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:contentDescription="@string/cd_empty_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/empty_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_btn"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/train_logo_large" />

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginBottom="@dimen/large_margin"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/empty_image"
            tools:text="No results" />

        <ProgressBar
            android:id="@+id/loading_indicator"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>